[project]
name = "horsetrading"
version = "0.1.0"
description = ""
authors = [
    {name = "rehan17",email = "rehan@numinolabs.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (==0.4.6)",
    "iniconfig (==2.1.0)",
    "invoke (==2.2.0)",
    "packaging (==25.0)",
    "pluggy (==1.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
poethepoet = "^0.34.0"
isort = "^6.0.1"
ruff = "^0.12.0"
pyright = "^1.1.402"

[tool.poe.tasks]
start = "python main.py"
test = "python -m pytest test/"


